--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -20,7 +20,6 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "collapsed": false,
     "id": "Y4CJ2heZZHA2"
    },
    "outputs": [],
@@ -33,9 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# scikit\n",
@@ -60,12 +57,12 @@
    "outputs": [],
    "source": [
     "# Login information\n",
-    "username = \"ASIAYYIH67IY4F5BX6FS\" # AWS Username\n",
-    "password = \"vD0sNNs6WBob29OsJynT7JzXPWXZcSNv9HxXpucV\"# AWS Password\n",
+    "username = # AWS Username\n",
+    "password = # AWS Password\n",
     "region = \"us-east-1\" # Change if different from your AWS region\n",
     "\n",
     "# Dataset location\n",
-    "s3 = \"s3a://cap-spring/book_data.csv\" #S3 dataset URL"
+    "s3 = #S3 dataset URL"
    ]
   },
   {
@@ -81,7 +78,6 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "collapsed": false,
     "id": "CluCfBnlZHA7"
    },
    "outputs": [],
@@ -95,9 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = sqlContext.read.format(\"csv\").option(\"header\", \"true\").load(s3)"
@@ -113,9 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -157,9 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -206,7 +196,6 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "collapsed": false,
     "id": "KDzYkE5MZHBF"
    },
    "outputs": [],
@@ -224,9 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "ValueError",
@@ -268,7 +255,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -282,7 +269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
