Cleans up test/train set assignments for readability

--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -200,7 +200,13 @@
    },
    "outputs": [],
    "source": [
-    "train, test = df.randomSplit([0.1, 0.9])"
+    "train, test = df.randomSplit([0.1, 0.9])\n",
+    "\n",
+    "train_desc = train.select('book_desc').collect()\n",
+    "train_genre = train.select('genres').collect()\n",
+    "\n",
+    "test_desc = test.select('book_desc').collect()\n",
+    "test_genre = test.select('genres').collect()"
    ]
   },
   {
@@ -232,8 +238,8 @@
     }
    ],
    "source": [
-    "model = MultinomialNB().fit(train.select('book_desc').collect(), train.select('genres').collect())\n",
-    "score = model.score(test.select('book_desc').collect(), test.select('genres').collect())\n",
+    "model = MultinomialNB().fit(train_desc, train_genre)\n",
+    "score = model.score(test_desc, test_genre)\n",
     "score"
    ]
   },
