--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -46,21 +46,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# pyspark\n",
-    "from pyspark.ml.feature import HashingTF as MLHashingTF\n",
-    "from pyspark.ml.feature import IDF as MLIDF\n",
+    "from pyspark.ml.feature import HashingTF, IDF\n",
     "from pyspark.sql.types import DoubleType"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -84,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -103,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -128,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -145,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -158,44 +157,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Test to confirm the dataset was obtained"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Row(book_authors='Suzanne Collins', book_desc=\"Winning will make you famous. Losing means certain death.The nation of Panem, formed from a post-apocalyptic North America, is a country that consists of a wealthy Capitol region surrounded by 12 poorer districts. Early in its history, a rebellion led by a 13th district against the Capitol resulted in its destruction and the creation of an annual televised event known as the Hunger Games. In punishment, and as a reminder of the power and grace of the Capitol, each district must yield one boy and one girl between the ages of 12 and 18 through a lottery system to participate in the games. The 'tributes' are chosen during the annual Reaping and are forced to fight to the death, leaving only one survivor to claim victory.When 16-year-old Katniss's young sister, Prim, is selected as District 12's female representative, Katniss volunteers to take her place. She and her male counterpart Peeta, are pitted against bigger, stronger representatives, some of whom have trained for this their whole lives. , she sees it as a death sentence. But Katniss has been close to death before. For her, survival is second nature.\", book_edition=None, book_format='Hardcover', book_isbn='9.78044E+12', book_pages='374 pages', book_rating='4.33', book_rating_count='5519135', book_review_count='160706', book_title='The Hunger Games', genres='Young Adult|Fiction|Science Fiction|Dystopia|Fantasy|Science Fiction', image_url='https://images.gr-assets.com/books/1447303603l/2767052.jpg'),\n",
-       " Row(book_authors='J.K. Rowling|Mary GrandPré', book_desc='There is a door at the end of a silent corridor. And it’s haunting Harry Pottter’s dreams. Why else would he be waking in the middle of the night, screaming in terror?Harry has a lot on his mind for this, his fifth year at Hogwarts: a Defense Against the Dark Arts teacher with a personality like poisoned honey; a big surprise on the Gryffindor Quidditch team; and the looming terror of the Ordinary Wizarding Level exams. But all these things pale next to the growing threat of He-Who-Must-Not-Be-Named---a threat that neither the magical government nor the authorities at Hogwarts can stop.As the grasp of darkness tightens, Harry must discover the true depth and strength of his friends, the importance of boundless loyalty, and the shocking price of unbearable sacrifice.His fate depends on them alll.(back cover)', book_edition='US Edition', book_format='Paperback', book_isbn='9.78044E+12', book_pages='870 pages', book_rating='4.48', book_rating_count='2041594', book_review_count='33264', book_title='Harry Potter and the Order of the Phoenix', genres='Fantasy|Young Adult|Fiction', image_url='https://images.gr-assets.com/books/1255614970l/2.jpg'),\n",
-       " Row(book_authors='Harper Lee', book_desc='The unforgettable novel of a childhood in a sleepy Southern town and the crisis of conscience that rocked it, To Kill A Mockingbird became both an instant bestseller and a critical success when it was first published in 1960. It went on to win the Pulitzer Prize in 1961 and was later made into an Academy Award-winning film, also a classic.Compassionate, dramatic, and deeply moving, To Kill A Mockingbird takes readers to the roots of human behavior - to innocence and experience, kindness and cruelty, love and hatred, humor and pathos. Now with over 18 million copies in print and translated into forty languages, this regional story by a young Alabama woman claims universal appeal. Harper Lee always considered her book to be a simple love story. Today it is regarded as a masterpiece of American literature.', book_edition='50th Anniversary', book_format='Paperback', book_isbn='9.78006E+12', book_pages='324 pages', book_rating='4.27', book_rating_count='3745197', book_review_count='79450', book_title='To Kill a Mockingbird', genres='Classics|Fiction|Historical|Historical Fiction|Academic|School', image_url='https://images.gr-assets.com/books/1361975680l/2657.jpg')]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "smalldf = df.take(3)\n",
-    "smalldf"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Project"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -206,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -231,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -283,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -301,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -321,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -341,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -360,8 +327,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Applies the above processes to rdd"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -372,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -398,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -438,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -472,14 +446,24 @@
     "id": "bYdGn8tsZHBQ"
    },
    "source": [
-    "### TF/IDF\n",
+    "### TF/IDF"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sources to learn more:\n",
     "\n",
-    "One thing that will need to happen is to use regex to transform the genres into a dataframe"
+    "* https://spark.apache.org/docs/latest/ml-features#tf-idf\n",
+    "* https://scikit-learn.org/stable/tutorial/text_analytics/working_with_text_data.html\n",
+    "* https://machinelearningmastery.com/prepare-text-data-machine-learning-scikit-learn/\n",
+    "* https://programminghistorian.org/en/lessons/analyzing-documents-with-tfidf#scikit-learn-settings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -501,9 +485,18 @@
     }
    ],
    "source": [
-    "htf = MLHashingTF(inputCol=\"description\", outputCol=\"tf\")\n",
+    "htf = HashingTF(inputCol=\"description\", outputCol=\"tf\")\n",
     "tf = htf.transform(books_df)\n",
     "tf.show(n=3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Note: this takes a long time to complete. My internet may be bad right now or AWS may have a slowdown, but this took 5-10 minut"
    ]
   },
   {
@@ -514,7 +507,7 @@
    },
    "outputs": [],
    "source": [
-    "idf = MLIDF(inputCol=\"tf\", outputCol=\"idf\")\n",
+    "idf = IDF(inputCol=\"tf\", outputCol=\"idf\")\n",
     "tfidf = idf.fit(tf).transform(tf)\n",
     "tfidf.show(n=3)"
    ]
@@ -528,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -547,11 +540,21 @@
    "source": [
     "train_description = train.select('description').collect()\n",
     "train_rating = train.select('rating').collect()\n",
-    "# train_genre = train.select('genres').collect()\n",
     "\n",
     "test_description = test.select('description').collect()\n",
-    "test_rating = test.select('rating').collect()\n",
-    "# test_genre = test.select('genres').collect()"
+    "test_rating = test.select('rating').collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "train_genre = train.select('genres').collect()\n",
+    "test_genre = test.select('genres').collect()"
    ]
   },
   {
@@ -569,28 +572,10 @@
    },
    "outputs": [],
    "source": [
-    "# model = MultinomialNB().fit(train_desc, train_genre)\n",
-    "# score = model.score(test_desc, test_genre)\n",
-    "# score"
+    "model = MultinomialNB().fit(train_description, train_rating)\n",
+    "score = model.score(test_description, test_rating)\n",
+    "score"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
